--- a/public/Editor.css
+++ b/public/Editor.css
@@ -1,8 +1,13 @@
+/* ======================= EDITOR ========================= */
+
 @page {
-  margin-left: 2in;
-  margin-right: 2in;
-  margin-bottom: 2in;
+  margin: 10mm;
 }
+
+@page :first {
+  margin-top: 0;
+}
+
 .remirror-editor-wrapper {
   @apply w-full max-w-full flex-1 flex-col;
 }
@@ -39,13 +44,13 @@
     @apply font-mono text-white underline decoration-dashed underline-offset-2 !important;
   } */
   :is(h1, h2, h3, h4, h5, h6) {
-    @apply font-bold;
+    @apply font-bold m-0;
   }
   h1 {
     @apply text-2xl !important;
   }
   h2 {
-    @apply text-xl;
+    @apply text-xl !important;
   }
   h3 {
     @apply text-lg;
@@ -61,7 +66,10 @@
   }
 
   hr {
-    @apply border-zinc-700 !important;
+    margin: 0;
+    margin-block-start: 0;
+    margin-block-end: 0;
+    @apply border-zinc-700 m-0 !important;
   }
   ol {
     @apply ml-1 list-decimal;
